# Asteroids

./: .gitignore  CMakeLists.txt  README.md  UserDefinitions.cmake.example
CMake/: FindGLEW.cmake  FindGLFW3.cmake
CMake/VisualStudio/: asteroids.vcxproj.user.in
CMakeScripts/: FindGLEW.cmake  FindGLFW3.cmake  FindGLM.cmake
data/shader/: asteroid.glsl  entity.glsl  font.glsl  global.inc.glsl  particle.glsl  ship.glsl  test.glsl
doc/de/: .gitignore  Makefile  do-make.bat  do-make_impl.bat  doc_de.sublime-project
doc/de/graphs/: dependency1.graphml
doc/de/listings/: CMakeLists-option.txt  GameObject.h  Mesh.h  Pipeline-Approach1.h  Pipeline-Approach2.h  TaskScheduler.h  UserDefinitions.cmake.windows  Window.h  mainloop.cpp  shader.glsl
doc/de/listings/dpointer/: Window.h  WindowGLFW.cpp
doc/de/listings/pimpl/: Window.cpp  Window.h  WindowImplGLFW.h
doc/de/src/: doc_de.tex  preamble.tex
src/: CMakeLists.txt  main.cpp
src/Components/: ColliderComponent.cpp  ColliderComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  PhysicsEuler.cpp  PhysicsEuler.h  PhysicsRungeKutta.cpp  PhysicsRungeKutta.h
src/Game/: Asteroid.cpp  Asteroid.h  ColliderComponent.cpp  ColliderComponent.h  FontRenderer.cpp  FontRenderer.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  ParticleEmitter.cpp  ParticleEmitter.h  PhysicsComponent.cpp  PhysicsComponent.h  Projectile.cpp  Projectile.h  Ship.cpp  Ship.h  UFO.cpp  UFO.h
src/Game/Components/: ColliderComponent.cpp  ColliderComponent.h  CollisionComponent.cpp  CollisionComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  PhysicsEuler.cpp  PhysicsEuler.h  PhysicsRungeKutta.cpp  PhysicsRungeKutta.h  PhysicsState.h
src/Geometry/: Mesh.cpp  Mesh.h
src/Graphics/: Graphics.cpp  Graphics.h
src/Graphics/Geometry/: Mesh.cpp  Mesh.h
src/Graphics/Shader/: Globals.h  Program.cpp  Program.h  Shader.cpp  Shader.h  UniformAssigner.cpp  UniformAssigner.h
src/Graphics/Window/: Window.cpp  Window.h
src/Math/: Math.h  Vector2.h  Vector4.h
src/Shader/: Globals.h  Manager.h  Program.cpp  Program.h  Shader.cpp  Shader.h  UniformAssigner.cpp  UniformAssigner.h  UniformHandle.cpp  UniformHandle.h
src/Window/: Window.cpp  Window.h
